<resources>
    <string name="app_name">AnimeGo</string>
    <string name="title_activity_referencia">ReferenciaActivity</string>
    <string name="hint_username">Nombre de Usuario</string>
    <string name="hint_password">Contraseña</string>
    <string name="text_button_login">Login</string>
    <string name="dont_have_account">No tienes cuenta?,</string>
    <string name="create_here">crear cuenta</string>
    <string name="hint_email">Correo</string>
    <string name="hint_name">Nombre</string>
    <string name="hint_user">Usuario</string>
    <string name="toolbar_tittle_createaccount">Nueva cuenta</string>
    <string name="title_cardview">Domestic na Kanojo</string>
    <string name="description_cardview">Capitulos: 250</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bottom_home">Hogar</string>
    <string name="bottom_search">Buscar</string>
    <string name="bottom_profile">Perfil</string>
    <string name="favorite_cardview">Favorito</string>
    <string name="chapter_detail">Chapter:</string>
    <string name="content_detail">Detalle del contenido</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="transitionname_picture">transitionnamepicture</string>
</resources>
